--- a/src/components/general/Footer.astro
+++ b/src/components/general/Footer.astro
@@ -6,7 +6,8 @@ import { info } from "@data";
   class="container flex sm:flex-row flex-col justify-between items-center mb-8 sm:mb-4"
 >
   <p class="dark:text-light text-right my-8">
-    Developed by <strong>Uzair Ahmed</strong>
+    <span>Developed by <strong>Marek Baranowski</strong></span>
+    <span>(Based on Uzair Ahmed)</span>
   </p>
   <div class="grid grid-cols-5 gap-4">
     <a
